# ChessManager

./: .gitignore  App.axaml  App.axaml.cs  Cargo.toml  ChessManager.sln  Dioxus.toml  Program.cs  README.md  ViewLocator.cs  app.manifest  input.css  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
ChessManager/: ChessManager.csproj  Program.cs  ViewLocator.cs
ChessManager/CosmoStore/: CosmoStore.cs  EventConversion.cs  EventStore.cs  IAggregate.cs  Validation.cs
ChessManager/Models/: Match.cs  MatchPlayer.cs  Player.cs  Result.cs  Round.cs  Tournament.cs
ChessManager/ViewModels/: HomeViewModel.cs  MainWindowViewModel.cs  RouteManager.cs  TournamentViewModel.cs  ViewModelBase.cs
ChessManager/Views/: HomeView.axaml  HomeView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  TournamentView.axaml  TournamentView.axaml.cs
ChessManagerTests/: ChessManagerTests.csproj  CosmoStoreTests.cs  DisposableDatabase.cs  HelloTest.cs  UnitTest1.cs
Views/: MainWindow.axaml
assets/: tailwind.css
entity/src/: lib.rs
migration/src/: lib.rs  m20250323_034551_create_tournament.rs
src/: main.rs
src/components/: daisy_error.rs  hero.rs  loading.rs  mod.rs  navbar.rs
src/db/: db.rs
src/entity/: match.rs  mod.rs  player.rs  prelude.rs  setting.rs  tournament.rs  tournament_player.rs
src/features/: mod.rs
src/features/home/: mod.rs
src/features/options/: mod.rs
src/features/players/: mod.rs
src/features/time_calculator/: mod.rs
src/features/tournaments/: active.rs  list.rs  mod.rs  new.rs  past.rs  queries.rs  types.rs  upcoming.rs
src/utils/: date_format.rs
