[package]
name = "chessmanager"
version = "0.1.4"
authors = ["kunjee17"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0", features = ["router"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
lto = true
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link
link-arg = "-s"

# Additional recommended settings
strip = true  # Automatically strip symbols from the binary
overflow-checks = true  # Enable integer overflow checks even in release
debug = false  # Remove debug symbols
incremental = false  # Disable incremental compilation in release builds
